@@ -3,11 +3,125 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>org.axdt.as3.runtime</artifactId>
-  <version>0.0.8-SNAPSHOT</version>
+  <version>0.0.9-SNAPSHOT</version>
   <packaging>eclipse-plugin</packaging>
   <parent>
     <artifactId>org.axdt.as3</artifactId>
     <groupId>org.axdt</groupId>
-    <version>0.0.8-SNAPSHOT</version>
+    <version>0.0.9-SNAPSHOT</version>
   </parent>
+    <build>
+		<resources>
+			<resource>
+				<directory>${project.build.directory}/xtext/tmp</directory>
+			</resource>
+		</resources>
+      <plugins>
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>copy-resources</id>
+						<phase>initialize</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${project.build.directory}/xtext/tmp</outputDirectory>
+							<resources>
+								<resource>
+									<directory>src/main/java</directory>
+									<includes>
+										<include>**/*.xtext</include>
+										<include>**/*.mwe2</include>
+<!--
+										<include>**/*.ecore</include>
+										<include>**/*.genmodel</include>
+-->
+									</includes>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-clean-plugin</artifactId>
+				<configuration>
+					<filesets>
+						<fileset>
+							<directory>src/generated/java</directory>
+							<includes>
+								<include>**</include>
+							</includes>
+                                                        <excludes>
+                                                                <exclude>.gitignore</exclude>
+                                                        </excludes>
+						</fileset>
+						<fileset>
+							<directory>../as3-ui/src/generated/java</directory>
+							<includes>
+								<include>**</include>
+							</includes>
+                                                        <excludes>
+                                                                <exclude>.gitignore</exclude>
+                                                        </excludes>
+						</fileset>
+						<fileset>
+							<directory>../as3-test/src/generated/java</directory>
+							<includes>
+								<include>**</include>
+							</includes>
+                                                        <excludes>
+                                                                <exclude>.gitignore</exclude>
+                                                        </excludes>
+						</fileset>
+					</filesets>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.fornax.toolsupport</groupId>
+				<artifactId>fornax-oaw-m2-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>xtext</id>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>run-workflow</goal>
+						</goals>
+						<configuration>
+							<workflowEngine>mwe2</workflowEngine>
+							<workflowDescriptor>org.axdt.as3</workflowDescriptor>
+							<timestampFileName>xtext-generator.timestamp</timestampFileName>
+							<jvmSettings>
+								<fork>true</fork>
+								<jvmArgs>
+									<jvmArg>-Xms100m</jvmArg>
+									<jvmArg>-Xmx2000m</jvmArg>
+									<jvmArg>-XX:MaxPermSize=128m</jvmArg>
+									<jvmArg>-Dorg.eclipse.emf.examples.generator.validator=false</jvmArg>
+								</jvmArgs>
+							</jvmSettings>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-antrun-plugin</artifactId>
+            <version>1.2</version>
+            <executions>
+               <execution>
+                  <phase>process-sources</phase>
+                  <goals>
+                     <goal>run</goal>
+                  </goals>
+                  <configuration>
+<target><ant antfile="${basedir}/build.xml"/></target>
+                  </configuration>
+               </execution>
+            </executions>
+         </plugin>
+      </plugins>
+   </build>
 </project>
